検索ウィンドウを追加

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -533,6 +533,24 @@
 
 }
 
+// find window
+.broccoli--find-window{
+	h2{
+		font-weight: bold;
+		text-align: center;
+		margin: 1em;
+	}
+
+	&-form-buttons{
+		margin-top: 1em;
+	}
+
+	&-field-error-message{
+		display: none;
+	}
+
+}
+
 
 // lightbox
 .broccoli--lightbox{
