--- a/tests/testdata/modules1/dev/twig/template.html.twig
+++ b/tests/testdata/modules1/dev/twig/template.html.twig
@@ -11,17 +11,20 @@
 </div>
 
 <div class="twig_template-loop">
-{{ loopitem_start('loop') }}
 {% for loopRow in loop %}
-{{dump(loopRow.text2)}}
+{{ loopitem_start('loop') }}
+<div>
+{{loopRow.text2}}
+{# {{dump(loopRow.text2)}} #}
 <p>{{loopRow.text1}}</p>
-{{ loopitem_end() }}
+</div>
+{{ loopitem_end('loop') }}
 {% endfor %}
 {{ appender('loop') }}
 
 
-{{dump(loop)}}
-{{ loop[2].text1 }}
+{# {{dump(loop)}}
+{{ loop[2].text1 }} #}
 </div>
 
 {%if _ENV.mode=="canvas"%}
