Twig: `loopitem_start('loop')` `loopitem_end()` を追加 (PHP)

--- a/tests/testdata/modules1/dev/twig/template.html.twig
+++ b/tests/testdata/modules1/dev/twig/template.html.twig
@@ -18,7 +18,7 @@
 {# {{dump(loopRow.text2)}} #}
 <p>{{loopRow.text1}}</p>
 </div>
-{{ loopitem_end('loop') }}
+{{ loopitem_end() }}
 {% endfor %}
 {{ appender('loop') }}
 
