編集ウィンドウ内に、モジュールのREADMEを表示する機能を追加。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -413,9 +413,16 @@
 	.has-error h3{
 		color: #a94442;
 	}
-	&-window-message-field{
+	&-message-field{
 		display: none;
 		margin: 10px;
+	}
+	&-module-readme{
+		max-height: 400px;
+		overflow: auto;
+	}
+	&-module-readme-switch{
+		text-align: right;
 	}
 	&-builtin-fields{
 		border: 1px solid #99e;
