validate に required を持つ項目に、必須入力欄であることを示す 赤いアスタリスク を表示するようになった。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -413,6 +413,14 @@
 	.has-error h3{
 		color: #a94442;
 	}
+	&-field-required{
+		h3::before {
+			content: "*";
+			color: #f33;
+			margin-right: 0.5em;
+			font-size: 80%;
+		}
+	}
 	&-message-field{
 		display: none;
 		margin: 10px;
