Twigテンプレートで作成したモジュールで、 loopフィールドサブモジュール内のmoduleフィールドに他のモジュールを入れられな不具合を修正。

--- a/tests/testdata/htdocs/common/css/module.css
+++ b/tests/testdata/htdocs/common/css/module.css
@@ -99,6 +99,11 @@
     background: #f8f8ff;
     padding: 1em;
     margin: 0.2em 0; }
+  .twig_template-loop2 {
+    border: 1px solid #8aa;
+    background: #fff8f8;
+    padding: 1em;
+    margin: 0.2em 0; }
   .twig_template-is_canvas {
     background: #f00;
     color: #fff9f9;
