--- a/tests/testdata/modules1/dev/twig/module.css.scss
+++ b/tests/testdata/modules1/dev/twig/module.css.scss
@@ -16,6 +16,12 @@
         padding:1em;
         margin: 0.2em 0;
     }
+    &-loop2{
+        border: 1px solid #8aa;
+        background: #fff8f8;
+        padding:1em;
+        margin: 0.2em 0;
+    }
     &-is_canvas{
         background: #f00;
         color: #fff9f9;
