--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -553,6 +553,9 @@
 			align-items: stretch;
 			text-align: center;
 			padding: 10px 0;
+			@media all and (max-width:600px){
+				display: block;
+			}
 		}
 		&-ok {
 			text-align: center;
@@ -571,6 +574,10 @@
 			flex-grow: 1;
 			padding: 10px;
 			width: 50%;
+			@media all and (max-width:600px){
+				text-align: center;
+				width: 100%;
+			}
 			button {
 				max-width: 360px;
 				width: 80%;
@@ -584,6 +591,10 @@
 			flex-grow: 1;
 			padding: 10px;
 			width: 50%;
+			@media all and (max-width:600px){
+				text-align: center;
+				width: 100%;
+			}
 			button {
 				max-width: 360px;
 				width: 80%;
