外部依存パッケージのバージョンを更新。

--- a/tests/testdata/htdocs/common/css/module.css
+++ b/tests/testdata/htdocs/common/css/module.css
@@ -123,23 +123,23 @@ ul > li > ul, ul > li > ol, ul > li > p {
   margin-top: 1em;
   margin-bottom: 1em;
   padding-left: 0; }
-  .px2-horizontal-list > ul > li, .px2-horizontal-list > ul > ul > li, .px2-horizontal-list > li, .px2-horizontal-list > ul > li {
+  .px2-horizontal-list > ul > li, .px2-horizontal-list > ul > ul > li, .px2-horizontal-list > li {
     list-style-type: none;
     padding-left: 0;
     padding-right: 1em; }
-    .px2-horizontal-list > ul > li > p, .px2-horizontal-list > ul > ul > li > p, .px2-horizontal-list > li > p, .px2-horizontal-list > ul > li > p {
+    .px2-horizontal-list > ul > li > p, .px2-horizontal-list > ul > ul > li > p, .px2-horizontal-list > li > p {
       margin: 0; }
 
 .px2-note-list, .px2-note-list > ul {
   margin-top: 1em;
   margin-bottom: 1em;
   padding-left: 1.5em; }
-  .px2-note-list > ul > li, .px2-note-list > ul > ul > li, .px2-note-list > li, .px2-note-list > ul > li {
+  .px2-note-list > ul > li, .px2-note-list > ul > ul > li, .px2-note-list > li {
     list-style-type: none;
     color: #999;
     font-size: 86%;
     position: relative; }
-    .px2-note-list > ul > li::before, .px2-note-list > ul > ul > li::before, .px2-note-list > li::before, .px2-note-list > ul > li::before {
+    .px2-note-list > ul > li::before, .px2-note-list > ul > ul > li::before, .px2-note-list > li::before {
       content: "※";
       position: absolute;
       left: -1.5em; }
@@ -189,27 +189,27 @@ ul > li > ul, ul > li > ol, ul > li > p {
   float: right;
   *margin-right: -10px; }
 
-@media all and (max-width: 520px) {
+@media (max-width: 520px) {
   .cols .cols-col.cols-3of4 {
     width: auto;
     float: none; } }
 
-@media all and (max-width: 520px) {
+@media (max-width: 520px) {
   .cols .cols-col.cols-1of2 {
     width: auto;
     float: none; } }
 
-@media all and (max-width: 520px) {
+@media (max-width: 520px) {
   .cols .cols-col.cols-2of3 {
     width: auto;
     float: none; } }
 
-@media all and (max-width: 520px) {
+@media (max-width: 520px) {
   .cols .cols-col.cols-1of3 {
     width: auto;
     float: none; } }
 
-@media all and (max-width: 520px) {
+@media (max-width: 520px) {
   .cols .cols-col.cols-1of4 {
     width: auto;
     float: none; } }
