--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -605,6 +605,18 @@
 		}
 	}
 
+	&-field-preview {
+		font-size: 64%;
+		line-height: 1.1;
+		*{
+			color: #666;
+			text-decoration: none;
+			max-width: 100%;
+			max-height: 1.2em;
+			display: inline;
+		}
+	}
+
 	&-field-error-message{
 		display: none;
 	}
