クリップモジュールアイコンを画像化した。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -872,7 +872,8 @@
 		font-weight: bold;
 
 		&:after{
-			content: "@";
+			content: url("./images/clip.png");
+			width: 20px; height: 20px;
 			margin-left: 0.5em;
 			color: #669;
 		}
