--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -42,8 +42,8 @@
 		position: absolute;
 		top: 0; left:0;
 		width: 100%;
-		height: 10px;
-		border: none;
+		height: 100%;
+		border: 0px none;
 	}
 
 	.broccoli--panels{
