--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -409,6 +409,13 @@
 		margin: 0.5em 0 0.5em -30px;
 		background-color: #fff;
 		font-weight: bold;
+		position: relative;
+		small {
+			display: block;
+			font-size: 11px;
+			line-height: 1.3;
+			margin: 0 2px;
+		}
 	}
 	.has-error h3{
 		color: #a94442;
