--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -1046,3 +1046,19 @@
 		}
 	}
 }
+
+// Indicator
+.broccoli__indicator {
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: inline-block;
+	padding: 0.2em 2em;
+	background-color: #eee;
+	color: #999;
+	font-size: 10px;
+	opacity: 0.7;
+}
+body>.broccoli__indicator {
+	z-index: 2000000;
+}
