--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -1058,6 +1058,18 @@
 	color: #999;
 	font-size: 10px;
 	opacity: 0.7;
+	animation: broccoli__indicator 0.25s infinite;
+	@keyframes broccoli__indicator{
+		0%{
+			opacity: 0.7;
+		}
+		50%{
+			opacity: 0.5;
+		}
+	}
+	&-completed {
+		animation: none;
+	}
 }
 body>.broccoli__indicator {
 	z-index: 2000000;
