--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 .broccoli{
 	/* http://www.softel.co.jp/blogs/tech/archives/2909 */
 	cursor: default;
@@ -12,6 +13,9 @@
 	[tabindex]{
 		outline: none;
 	}
+
+	// Fields
+	@import '../../fields/client/app.fields.color';
 }
 
 // mixin: appender
