px2style  を内部に組み込んだ。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -16,6 +16,10 @@
 
 	// Fields
 	@import '../../fields/client/app.fields.color';
+
+	// px2style
+	@import '../../node_modules/px2style/dist/px2style';
+
 }
 
 // mixin: appender
