--- a/tests/testdata/htdocs/common/css/module.css
+++ b/tests/testdata/htdocs/common/css/module.css
@@ -61,6 +61,14 @@
   padding: 1em 2em; }
 
 /**
+ * module: testMod1:dev/multilang
+ */
+.mod-multi-language {
+  border: 2px solid #559;
+  background-color: #eef;
+  padding: 1em; }
+
+/**
  * module: testMod1:dev/resource_build
  */
 .resource-build {
