<モジュールのマルチ言語化> フィールドのフロントエンドの中で、 多言語対応機能を参照できるようになった。

--- a/tests/testdata/modules1/dev/multilang/template.html.twig
+++ b/tests/testdata/modules1/dev/multilang/template.html.twig
@@ -5,6 +5,7 @@
 {{ loopitem_start('loop1') }}
 <div>
     <div>{{ loopRow.text2 }}</div>
+    <div>{{ loopRow.select2 }}</div>
     <div>{{ loopRow.module2 }}</div>
 </div>
 {{ loopitem_end() }}
