--- a/tests/testdata/modules1/errors/addedfields/template.html.twig
+++ b/tests/testdata/modules1/errors/addedfields/template.html.twig
@@ -1,3 +1,14 @@
 <div class="errors-newloop">
-    <p>あとから追加されたフィールドのテスト</p>
+	<p>あとから追加されたフィールドのテスト</p>
+	<div>{{ text }}</div>
+	<div>{{ module }}</div>
+{% for loopRow in loop %}
+{{ loopitem_start('loop') }}
+<div>
+    <div>{{ loopRow.subtext }}</div>
+    <div>{{ loopRow.submodule }}</div>
+</div>
+{{ loopitem_end() }}
+{% endfor %}
+{{ appender('loop') }}
 </div>
