(サブモジュールが定義されていない loopフィールドのテストコンテンツを追加)

--- a/tests/testdata/modules1/errors/addedfields/template.html.twig
+++ b/tests/testdata/modules1/errors/addedfields/template.html.twig
@@ -2,6 +2,7 @@
 	<p>あとから追加されたフィールドのテスト</p>
 	<div>{{ text }}</div>
 	<div>{{ module }}</div>
+
 {% for loopRow in loop %}
 {{ loopitem_start('loop') }}
 <div>
@@ -11,4 +12,14 @@
 {{ loopitem_end() }}
 {% endfor %}
 {{ appender('loop') }}
+
+{% for loopRow in loop_undefined_submod %}
+{{ loopitem_start('loop_undefined_submod') }}
+<div>
+    <div>{{ loopRow.subtext }}</div>
+    <div>{{ loopRow.submodule }}</div>
+</div>
+{{ loopitem_end() }}
+{% endfor %}
+{{ appender('loop_undefined_submod') }}
 </div>
