--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -658,7 +658,7 @@
 	background-color: rgba(0, 0, 0, 0.2);
 
 	&-inner{
-		width: auto;
+		width: 580px;
 		max-width: calc(100% - 40px);
 		min-width: 480px;
 		height: auto;
@@ -679,9 +679,9 @@
 		}
 	}
 	&-inner--edit-window-mode {
-		width: 40%;
+		width: 100%;
 		height: 100%;
-		margin: 20px 20px 20px auto;
+		margin: 20px 20px 20px 20px;
 	}
 
 	@media all and (max-width: 600px) {
