--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -958,6 +958,10 @@
 	word-wrap: break-word;
 	word-break: break-word;
 
+	&-id{
+		color: #999;
+		border-bottom: 1px solid #999;
+	}
 	&-thumb{
 		width:200px;
 		max-width:20%;
