--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -881,7 +881,7 @@
 	background-color: rgba(128, 128, 128, 0.05);
 	width: 100%;
 	height: 100%;
-	z-index: 11000;
+	z-index: 1010000;
 	text-align: center;
 	&-inner{
 		position: absolute;
