UIの改善: 編集ウィンドウの下に、スクロールに追従するOKボタンを追加。 -> スクロールホイール操作に対する反応の改善

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -813,6 +813,7 @@
 		transition: opacity 0.3s;
 		opacity: 0;
 		z-index: 1000;
+		pointer-events: none;
 		&-main {
 			padding: 10px;
 			flex-grow: 10;
