モジュールパレット上のモジュール名を選択できないようにした。

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -1139,6 +1139,7 @@
 		text-overflow: ellipsis;
 		overflow: hidden;
 		cursor: move;
+		user-select: none;
 
 		&:after{
 			content: url("./images/clip.png");
