CSSに関する不具合を修正

--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -789,7 +789,7 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		background: #999999aa;
+		background-color: #9a9a9aab;
 		width: calc(100% - 18px - 18px);
 		box-sizing: border-box;
 		margin: 0 18px 18px;
