--- a/client/src/broccoli.css.scss
+++ b/client/src/broccoli.css.scss
@@ -82,10 +82,6 @@
 
 // Instance Path View
 .broccoli--instance-path-view{
-	// position: fixed;
-	// bottom: 0; left:0;
-	// z-index: 10;
-
 	font-size: 11px;
 
 	&-inner{
@@ -93,6 +89,7 @@
 		padding: 3px 10px;
 		border-top: 1px solid #000;
 		background: #f7f7f7;
+		box-sizing: border-box;
 
 		>ul{
 			display: block;
